--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,18 @@
   "minimum-stability": "stable",
   "require": {
     "php": ">=7.1",
-    "symfony/console":">=4.0",
-    "symfony/finder":">=4.1"
+    "symfony/console":">=4.0"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.12"
   },
   "autoload": {
     "psr-4": {
-      "App\\": "src/",
+      "App\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
       "Test\\": "bin/"
     }
   },
